--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.13"
+  },
+  "dependencies": {
+    "easytimer.js": "^4.5.1"
   }
 }
