--- a/package.json
+++ b/package.json
@@ -22,7 +22,5 @@
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.13"
   },
-  "dependencies": {
-    "json-server": "^0.17.0"
-  }
+  "dependencies": {}
 }
